# fea-viewer

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8edffb169590_initial_models.py
backend/app/: config.py  main.py
backend/app/api/v1/: routes_models.py
backend/app/models/: db.py
backend/app/parsing/: detect.py  models.py  normalizer.py  parse_subprocess_runner.py  storage_writer.py  surface_extractor.py  validator.py  vtk_parser.py
backend/app/storage/: s3_client.py
backend/app/tasks/: celery_app.py  parse_task.py  queue.py  task_failure_handler.py
backend/fea_viewer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/__pycache__/: conftest.cpython-313-pytest-9.0.2.pyc.20368
backend/tests/api/: test_health_routes.py  test_metadata_persistence.py  test_routes_models.py
backend/tests/audit-artifacts/: audit_broken.vtu  audit_valid_tet.vtu
backend/tests/parsing/: test_detect.py  test_normalizer.py  test_storage_writer.py  test_surface_extractor.py  test_validator.py  test_vtk_parser.py  test_vtu_error_handling.py
backend/tests/tasks/: test_parse_task.py  test_process_upload.py
deploy/: nginx.conf
docs/: 01-product-specification.md  02a-system-architecture.md  02b-rendering-observability.md  03a-execution-plan.md  03b-risks-acceptance.md  04-mvp-implementation-plan.md  05-release-recovery-plan.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.d.ts.map  vite.config.ts  vitest.config.ts
(+55 files in other folders)
