[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fea-viewer-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "meshio>=5.3",
    "fastapi>=0.110.0",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "sqlalchemy>=2.0.29",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
vtk = ["vtk>=9.3"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.28.0", "uvicorn[standard]>=0.29.0", "alembic>=1.13.1", "mypy>=1.11.0", "ruff>=0.8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
cache_dir = "pytest-cache"
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic", "fea_viewer_backend.egg-info"]

[tool.ruff.lint]
select = ["E7", "E9", "F"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true
exclude = "(alembic|fea_viewer_backend\\.egg-info)"
